mejoras visuales en capacitacion.html

--- a/capacitaciones.html
+++ b/capacitaciones.html
@@ -38,110 +38,127 @@
       <section>
         <h1>Capacitaciones de Inteligencia Artificial</h1>
 
-        <div class="curso-container">
-          <div class="curso">
-            <img
-              src="img/IAenContabilidad-Innovación y Futuro.jpg"
-              alt="Imagen Curso Introducción a la IA"
-              class=" curso-imagen-container"
-            />
-            <h2>IA en Contabilidad: Innovación y Futuro</h2>
-            <p>
-              La Inteligencia Artificial está transformando radicalmente la contabilidad. Este curso te introduce a las herramientas y conceptos clave que te permitirán automatizar tareas, realizar análisis predictivos y detectar fraudes con una eficiencia sin precedentes. Descubre cómo la IA te liberará de lo rutinario para que te enfoques en el análisis estratégico y te conviertas en un contador del futuro.
-            </p>
-            <p><strong>Docente:</strong> Cdora. Tania Damiani</p>
-            <p><strong>Fecha:</strong> 27 de Junio de 2024</p>
-            <a
-              href="https://micuenta.cpcemza.org.ar/capacitacion_.php?ID=465"
-              class="btn"
-              >Más Información</a
-            >
-          </div>
 
-          <div class="curso">
-            <img
-              src="img/Impacto de la IA en la estrategia empresarial.jpg"
-              alt="Imagen Impacto de la IA"
-              class=" curso-imagen-container"
-            />
-            <h2>Impacto de la IA en la estrategia empresarial</h2>
-            <p>
-              Descubre cómo la inteligencia artificial redefine el juego en un
-              mundo empresarial en transformación
-            </p>
-            <p><strong>Docente:</strong> Raymond Schefer</p>
-            <p><strong>Fecha:</strong> 07 de Agosto de 2024</p>
-            <a
-              href="https://micuenta.cpcemza.org.ar/capacitacion_.php?ID=479"
-              class="btn"
-              >Más Información</a
-            >
-          </div>
+  <div class="curso-container">
+  <div class="curso">
+    <div class="curso-cabecera">
+      <img
+        src="img/IAenContabilidad-Innovación y Futuro.jpg"
+        alt="Imagen Curso Introducción a la IA"
+        class="curso-imagen-container"
+      />
+      <h2>IA en Contabilidad: Innovación y Futuro</h2>
+    </div>
+    <div class="curso-detalles">
+      <p>
+      La Inteligencia Artificial está transformando radicalmente la contabilidad. Este curso te introduce a las herramientas y conceptos clave que te permitirán automatizar tareas, realizar análisis predictivos y detectar fraudes con una eficiencia sin precedentes. Descubre cómo la IA te liberará de lo rutinario para que te enfoques en el análisis estratégico y te conviertas en un contador del futuro.
+    </p>
+      <p><strong>Docente:</strong> Cdora. Tania Damiani</p>
+      <p><strong>Fecha:</strong> 27 de Junio de 2024</p>
+    </div>
+    <a
+      href="https://micuenta.cpcemza.org.ar/capacitacion_.php?ID=465"
+      class="btn"
+    >Más Información</a>
+  </div>
+  <div class="curso-container">
+  <div class="curso">
+    <div class="curso-cabecera">
+      <img
+        src="img/Impacto de la IA en la estrategia empresarial.jpg"
+        alt="Imagen Impacto de la IA"
+        class="curso-imagen-container"
+      />
+      <h2>Impacto de la IA en la estrategia empresarial</h2>
+    </div>
+    <div class="curso-detalles">
+      <p>
+        Descubre cómo la inteligencia artificial redefine el juego en un
+        mundo empresarial en transformación
+      </p>
+      <p><strong>Docente:</strong> Raymond Schefer</p>
+      <p><strong>Fecha:</strong> 07 de Agosto de 2024</p>
+    </div>
+    <a
+      href="https://micuenta.cpcemza.org.ar/capacitacion_.php?ID=479"
+      class="btn"
+    >Más Información</a>
+  </div>
 
-          <div class="curso">
-            <img
-              src="img/Optimización Contable con INTELIGENCIA.png"
-              alt="Imagen Optimización Contable con INTELIGENCIA"
-              class=" curso-imagen-container"
-            />
-            <h2>
-              Optimización Contable con INTELIGENCIA ARTIFICIAL: Transformando
-              la Contabilidad con Machine Learning y Modelos LLM
-            </h2>
-            <p>
-              Este taller se centra en cómo los avances en inteligencia
-              artificial, específicamente el Machine Learning y los Modelos de
-              Lenguaje de Gran Tamaño (LLM), están revolucionando el campo de la
-              contabilidad. Los participantes aprenderán cómo estas tecnologías
-              pueden ser aplicadas para mejorar la precisión, eficiencia y
-              análisis en sus prácticas contables.
-            </p>
-            <p><strong>Docente:</strong> Cdora. Tania Damiani</p>
-            <p><strong>Fecha:</strong> 15 de Agosto de 2024</p>
-            <a
-              href="https://micuenta.cpcemza.org.ar/capacitacion_.php?ID=482"
-              class="btn"
-              >Más Información</a
-            >
-          </div>
+  <div class="curso">
+    <div class="curso-cabecera">
+      <img
+        src="img/Optimización Contable con INTELIGENCIA.png"
+        alt="Imagen Optimización Contable con INTELIGENCIA"
+        class="curso-imagen-container"
+      />
+      <h2>
+        Optimización Contable con INTELIGENCIA ARTIFICIAL: Transformando
+        la Contabilidad con Machine Learning y Modelos LLM
+      </h2>
+    </div>
+    <div class="curso-detalles">
+      <p>
+        Este taller se centra en cómo los avances en inteligencia
+        artificial, específicamente el Machine Learning y los Modelos de
+        Lenguaje de Gran Tamaño (LLM), están revolucionando el campo de la
+        contabilidad. Los participantes aprenderán cómo estas tecnologías
+        pueden ser aplicadas para mejorar la precisión, eficiencia y
+        análisis en sus prácticas contables.
+      </p>
+      <p><strong>Docente:</strong> Cdora. Tania Damiani</p>
+      <p><strong>Fecha:</strong> 15 de Agosto de 2024</p>
+    </div>
+    <a
+      href="https://micuenta.cpcemza.org.ar/capacitacion_.php?ID=482"
+      class="btn"
+    >Más Información</a>
+  </div>
 
-          <div class="curso">
-            <img
-              src="img/Taller de inteligencia artificial enfocado en análisis de datos para contadores.jpg"
-              alt="Imagen inteligencia artificial enfocado en análisis de datos"
-              class=" curso-imagen-container"
-            />
-            <h2>Taller de inteligencia artificial enfocado en análisis de datos para contadores</h2>
-            <p>
-              Transforma tu práctica contable con Inteligencia Artificial: Domina el análisis de datos, automatiza procesos y toma decisiones estratégicas basadas en Machine Learning.
-            </p>
-            <p><strong>Docente:</strong> Tania Damiani</p>
-            <p><strong>Fecha:</strong> 20 de Septiembre de 2024</p>
-            <a
-              href="https://micuenta.cpcemza.org.ar/capacitacion_.php?ID=494"
-              class="btn"
-              >Más Información</a
-            >
-          </div>
+  <div class="curso">
+    <div class="curso-cabecera">
+      <img
+        src="img/Taller de inteligencia artificial enfocado en análisis de datos para contadores.jpg"
+        alt="Imagen inteligencia artificial enfocado en análisis de datos"
+        class="curso-imagen-container"
+      />
+      <h2>Taller de inteligencia artificial enfocado en análisis de datos para contadores</h2>
+    </div>
+    <div class="curso-detalles">
+      <p>
+        Transforma tu práctica contable con Inteligencia Artificial: Domina el análisis de datos, automatiza procesos y toma decisiones estratégicas basadas en Machine Learning.
+      </p>
+      <p><strong>Docente:</strong> Tania Damiani</p>
+      <p><strong>Fecha:</strong> 20 de Septiembre de 2024</p>
+    </div>
+    <a
+      href="https://micuenta.cpcemza.org.ar/capacitacion_.php?ID=494"
+      class="btn"
+    >Más Información</a>
+  </div>
 
-          <div class="curso">
-            <img
-              src="img/Taller de automatización con Inteligencia Artificial Aplicada al Área Contable.jpg"
-              alt="Imagen automatización con Inteligencia Artificial"
-              class=" curso-imagen-container"
-            />
-            <h2>Taller de automatización con Inteligencia Artificial Aplicada al Área Contable</h2>
-            <p>
-              Revoluciona tu práctica contable con la Inteligencia Artificial. Este curso intensivo te guiará desde los fundamentos hasta la implementación práctica de herramientas de IA como GPTs personalizados y Copilot en hojas de cálculo. Automatiza tareas, obtén análisis predictivos más precisos, y descubre cómo la IA está redefiniendo el futuro de la contabilidad. Prepárate para liderar la transformación digital en tu campo.
-            </p>
-            <p><strong>Docente:</strong> Tania Damiani</p>
-            <p><strong>Fecha:</strong> 06 de Diciembre de 2024</p>
-            <a
-              href="https://micuenta.cpcemza.org.ar/capacitacion_.php?ID=479"
-              class="btn"
-              >Más Información</a
-            >
-          </div>
+  <div class="curso">
+    <div class="curso-cabecera">
+      <img
+        src="img/Taller de automatización con Inteligencia Artificial Aplicada al Área Contable.jpg"
+        alt="Imagen automatización con Inteligencia Artificial"
+        class="curso-imagen-container"
+      />
+      <h2>Taller de automatización con Inteligencia Artificial Aplicada al Área Contable</h2>
+    </div>
+    <div class="curso-detalles">
+      <p>
+        Revoluciona tu práctica contable con la Inteligencia Artificial. Este curso intensivo te guiará desde los fundamentos hasta la implementación práctica de herramientas de IA como GPTs personalizados y Copilot en hojas de cálculo. Automatiza tareas, obtén análisis predictivos más precisos, y descubre cómo la IA está redefiniendo el futuro de la contabilidad. Prepárate para liderar la transformación digital en tu campo.
+      </p>
+      <p><strong>Docente:</strong> Tania Damiani</p>
+      <p><strong>Fecha:</strong> 06 de Diciembre de 2024</p>
+    </div>
+    <a
+      href="https://micuenta.cpcemza.org.ar/capacitacion_.php?ID=479"
+      class="btn"
+    >Más Información</a>
+  </div>
+</div>
         </div>
       </section>
     </main>
@@ -178,5 +195,38 @@
         </div>
     </div>
 </footer>
+<script>
+document.addEventListener('DOMContentLoaded', function() {
+  const cursos = document.querySelectorAll('.curso');
+
+  cursos.forEach(function(curso) {
+    const botonMasInfo = curso.querySelector('.btn'); // Tu botón de "Más Información"
+    const detallesDiv = curso.querySelector('.curso-detalles'); // El div que contiene los detalles
+    
+    if (botonMasInfo && detallesDiv) {
+      botonMasInfo.addEventListener('click', function(event) {
+        // Siempre prevenimos la acción por defecto inicialmente,
+        // ya que decidiremos si redirigir o no.
+        event.preventDefault(); 
+
+        const enlaceRedireccion = this.href; // 'this' se refiere al botón que fue clickeado
+
+        // Comprobar si los detalles ya están visibles
+        if (detallesDiv.classList.contains('visible')) {
+          // Si ya están visibles, este es el "segundo clic" (o posterior)
+          // y procedemos a redirigir.
+          window.location.href = enlaceRedireccion;
+        } else {
+          // Si no están visibles, este es el "primer clic".
+          // Mostramos los detalles añadiendo la clase 'visible'.
+          detallesDiv.classList.add('visible');
+          // No hacemos nada más; el usuario ahora puede ver los detalles.
+          // La próxima vez que haga clic en este mismo botón, la condición anterior será verdadera.
+        }
+      });
+    }
+  });
+});
+</script>
 <script src="script.js"></script>
 </html>
