Estilizacion botones mas, menos e ingresar

--- a/capacitaciones.html
+++ b/capacitaciones.html
@@ -41,6 +41,41 @@
 
 
   <div class="curso">
+  <div class="curso-cabecera">
+    <img
+      src="img/IAenContabilidad-Innovación y Futuro.jpg"
+      alt="Imagen Curso Introducción a la IA"
+      class="curso-imagen-container"
+    />
+    <h2>IA en Contabilidad: Innovación y Futuro</h2>
+  </div>
+  <div class="curso-detalles">
+    <p>
+      La Inteligencia Artificial está transformando radicalmente la contabilidad. Este curso te introduce a las herramientas y conceptos clave que te permitirán automatizar tareas, realizar análisis predictivos y detectar fraudes con una eficiencia sin precedentes. Descubre cómo la IA te liberará de lo rutinario para que te enfoques en el análisis estratégico y te conviertas en un contador del futuro.
+    </p>
+    <p><strong>Docente:</strong> Cdora. Tania Damiani</p>
+    <p><strong>Fecha:</strong> 27 de Junio de 2024</p>
+    <a
+      href="https://micuenta.cpcemza.org.ar/capacitacion_.php?ID=465"
+      class="btn btn-ingresar"
+      aria-label="Ingresar a la capacitación" >
+      <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" class="icon-arrow-right"><line x1="5" y1="12" x2="19" y2="12"></line><polyline points="12 5 19 12 12 19"></polyline></svg>
+    </a>
+  </div>
+  <a
+    href="#"
+    class="btn btn-toggle-detalles"
+    aria-label="Más Información" >
+    <span class="toggle-icon-placeholder">
+      </span>
+  </a>
+</div>
+
+
+
+
+
+  <div class="curso">
     <div class="curso-cabecera">
       <img
         src="img/IAenContabilidad-Innovación y Futuro.jpg"
@@ -58,12 +93,18 @@
       <a
         href="https://micuenta.cpcemza.org.ar/capacitacion_.php?ID=465"
         class="btn btn-ingresar"
-      >Ingresar -></a>
+        aria-label="Ingresar a la capacitación"
+      >
+        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" class="icon-arrow-right"><line x1="5" y1="12" x2="19" y2="12"></line><polyline points="12 5 19 12 12 19"></polyline></svg>
+      </a>
     </div>
     <a
       href="#"
       class="btn btn-toggle-detalles"
-    >+ Información</a>
+      aria-label="Más Información"
+    >
+      <span class="toggle-icon-placeholder"></span>
+    </a>
   </div>
 
   <div class="curso">
@@ -85,12 +126,18 @@
       <a
         href="https://micuenta.cpcemza.org.ar/capacitacion_.php?ID=479"
         class="btn btn-ingresar"
-      >Ingresar -></a>
+        aria-label="Ingresar a la capacitación"
+      >
+        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" class="icon-arrow-right"><line x1="5" y1="12" x2="19" y2="12"></line><polyline points="12 5 19 12 12 19"></polyline></svg>
+      </a>
     </div>
     <a
       href="#"
       class="btn btn-toggle-detalles"
-    >+ Información</a>
+      aria-label="Más Información"
+    >
+      <span class="toggle-icon-placeholder"></span>
+    </a>
   </div>
 
   <div class="curso">
@@ -119,12 +166,18 @@
       <a
         href="https://micuenta.cpcemza.org.ar/capacitacion_.php?ID=482"
         class="btn btn-ingresar"
-      >Ingresar -></a>
+        aria-label="Ingresar a la capacitación"
+      >
+        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" class="icon-arrow-right"><line x1="5" y1="12" x2="19" y2="12"></line><polyline points="12 5 19 12 12 19"></polyline></svg>
+      </a>
     </div>
     <a
       href="#"
       class="btn btn-toggle-detalles"
-    >+ Información</a>
+      aria-label="Más Información"
+    >
+      <span class="toggle-icon-placeholder"></span>
+    </a>
   </div>
 
   <div class="curso">
@@ -145,12 +198,18 @@
       <a
         href="https://micuenta.cpcemza.org.ar/capacitacion_.php?ID=494"
         class="btn btn-ingresar"
-      >Ingresar -></a>
+        aria-label="Ingresar a la capacitación"
+      >
+        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" class="icon-arrow-right"><line x1="5" y1="12" x2="19" y2="12"></line><polyline points="12 5 19 12 12 19"></polyline></svg>
+      </a>
     </div>
     <a
       href="#"
       class="btn btn-toggle-detalles"
-    >+ Información</a>
+      aria-label="Más Información"
+    >
+      <span class="toggle-icon-placeholder"></span>
+    </a>
   </div>
 
   <div class="curso">
@@ -171,14 +230,26 @@
       <a
         href="https://micuenta.cpcemza.org.ar/capacitacion_.php?ID=479" 
         class="btn btn-ingresar"
-      >Ingresar -></a>
+        aria-label="Ingresar a la capacitación"
+      >
+        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" class="icon-arrow-right"><line x1="5" y1="12" x2="19" y2="12"></line><polyline points="12 5 19 12 12 19"></polyline></svg>
+      </a>
     </div>
     <a
       href="#"
       class="btn btn-toggle-detalles"
-    >+ Información</a>
+      aria-label="Más Información"
+    >
+      <span class="toggle-icon-placeholder"></span>
+    </a>
   </div>
+
 </div>
+
+
+
+
+
 
         </div>
       </section>
@@ -217,32 +288,46 @@
     </div>
 </footer>
 <script>
+
+
 document.addEventListener('DOMContentLoaded', function() {
   const cursos = document.querySelectorAll('.curso');
 
+  // Definiciones de los SVGs como strings
+  const iconPlusSVG = '<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" class="icon-plus"><line x1="12" y1="5" x2="12" y2="19"></line><line x1="5" y1="12" x2="19" y2="12"></line></svg>';
+  const iconMinusSVG = '<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" class="icon-minus"><line x1="5" y1="12" x2="19" y2="12"></line></svg>';
+
   cursos.forEach(function(curso) {
-    const botonToggleDetalles = curso.querySelector('.btn-toggle-detalles'); // El botón "Más Información"
+    const botonToggleDetalles = curso.querySelector('.btn-toggle-detalles');
     const detallesDiv = curso.querySelector('.curso-detalles');
-    // El botón "Ingresar a la capacitación" está dentro de detallesDiv y funcionará como un enlace normal.
-    // No necesita un event listener de JS específico si su única acción es redirigir.
+    const iconPlaceholder = botonToggleDetalles ? botonToggleDetalles.querySelector('.toggle-icon-placeholder') : null;
 
-    if (botonToggleDetalles && detallesDiv) {
+    if (botonToggleDetalles && detallesDiv && iconPlaceholder) {
+      // Establecer el icono inicial y aria-label
+      if (detallesDiv.classList.contains('visible')) {
+        iconPlaceholder.innerHTML = iconMinusSVG;
+        botonToggleDetalles.setAttribute('aria-label', 'Menos Información');
+      } else {
+        iconPlaceholder.innerHTML = iconPlusSVG;
+        botonToggleDetalles.setAttribute('aria-label', 'Más Información');
+      }
+
       botonToggleDetalles.addEventListener('click', function(event) {
-        event.preventDefault(); // Previene la acción del enlace '#'
-
-        // Alterna la clase 'visible' para mostrar u ocultar los detalles
+        event.preventDefault(); 
         detallesDiv.classList.toggle('visible');
 
-        // Opcional: Cambiar el texto del botón "Más Información" / "Menos Información"
         if (detallesDiv.classList.contains('visible')) {
-          this.textContent = '- Información'; // 'this' se refiere al botonToggleDetalles
+          iconPlaceholder.innerHTML = iconMinusSVG;
+          this.setAttribute('aria-label', 'Menos Información'); // 'this' es botonToggleDetalles
         } else {
-          this.textContent = '+ Información';
+          iconPlaceholder.innerHTML = iconPlusSVG;
+          this.setAttribute('aria-label', 'Más Información');
         }
       });
     }
   });
 });
 </script>
+
 <script src="script.js"></script>
 </html>
