--- a/capacitaciones.html
+++ b/capacitaciones.html
@@ -39,33 +39,13 @@
         <h1>Capacitaciones de Inteligencia Artificial</h1>
         <div class="curso-container">
 
-
-
-
-
-  <div class="curso">
-    <div class="curso-cabecera">
-      <img
-        src="img/IAenContabilidad-Innovación y Futuro.jpg"
-        alt="Imagen Curso Introducción a la IA"
-        class="curso-imagen-container"
-      />
-      <h2>IA en Contabilidad: Innovación y Futuro</h2>
-    </div>
-    <div class="curso-detalles">
-      <p>
-        La Inteligencia Artificial está transformando radicalmente la contabilidad. Este curso te introduce a las herramientas y conceptos clave que te permitirán automatizar tareas, realizar análisis predictivos y detectar fraudes con una eficiencia sin precedentes. Descubre cómo la IA te liberará de lo rutinario para que te enfoques en el análisis estratégico y te conviertas en un contador del futuro.
-      </p>
-      <p><strong>Docente:</strong> Cdora. Tania Damiani</p>
-      <p><strong>Fecha:</strong> 27 de Junio de 2024</p>
-      <a
-        href="https://micuenta.cpcemza.org.ar/capacitacion_.php?ID=465"
-        class="btn btn-ingresar"
-        aria-label="Ingresar a la capacitación"
-      >
-        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" class="icon-arrow-right"><line x1="5" y1="12" x2="19" y2="12"></line><polyline points="12 5 19 12 12 19"></polyline></svg>
-      </a>
-    </div>
+<div class="curso">
+  <div class="curso-cabecera"> <img
+      src="img/IAenContabilidad-Innovación y Futuro.jpg"
+      alt="Imagen Curso Introducción a la IA"
+      class="curso-imagen-container"
+    />
+    <h2>IA en Contabilidad: Innovación y Futuro</h2>
     <a
       href="#"
       class="btn btn-toggle-detalles"
@@ -74,8 +54,26 @@
       <span class="toggle-icon-placeholder"></span>
     </a>
   </div>
+  <div class="curso-detalles">
+    <p>
+      La Inteligencia Artificial está transformando radicalmente la contabilidad. Este curso te introduce a las herramientas y conceptos clave que te permitirán automatizar tareas, realizar análisis predictivos y detectar fraudes con una eficiencia sin precedentes. Descubre cómo la IA te liberará de lo rutinario para que te enfoques en el análisis estratégico y te conviertas en un contador del futuro.
+    </p>
+    <p><strong>Docente:</strong> Cdora. Tania Damiani</p>
+    <p><strong>Fecha:</strong> 27 de Junio de 2024</p>
+    <a
+      href="https://micuenta.cpcemza.org.ar/capacitacion_.php?ID=465"
+      class="btn btn-ingresar"
+      aria-label="Ingresar a la capacitación"
+    >
+      <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" class="icon-arrow-right"><line x1="5" y1="12" x2="19" y2="12"></line><polyline points="12 5 19 12 12 19"></polyline></svg>
+    </a>
+  </div>
+  </div>
 
-  <div class="curso">
+
+
+
+  <div class="curso-container"> <div class="curso">
     <div class="curso-cabecera">
       <img
         src="img/Impacto de la IA en la estrategia empresarial.jpg"
@@ -83,6 +81,13 @@
         class="curso-imagen-container"
       />
       <h2>Impacto de la IA en la estrategia empresarial</h2>
+      <a
+        href="#"
+        class="btn btn-toggle-detalles"
+        aria-label="Más Información"
+      >
+        <span class="toggle-icon-placeholder"></span>
+      </a>
     </div>
     <div class="curso-detalles">
       <p>
@@ -99,13 +104,6 @@
         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" class="icon-arrow-right"><line x1="5" y1="12" x2="19" y2="12"></line><polyline points="12 5 19 12 12 19"></polyline></svg>
       </a>
     </div>
-    <a
-      href="#"
-      class="btn btn-toggle-detalles"
-      aria-label="Más Información"
-    >
-      <span class="toggle-icon-placeholder"></span>
-    </a>
   </div>
 
   <div class="curso">
@@ -118,6 +116,13 @@
       <h2>
         Optimización Contable con Inteligencia Artificial
       </h2>
+      <a
+        href="#"
+        class="btn btn-toggle-detalles"
+        aria-label="Más Información"
+      >
+        <span class="toggle-icon-placeholder"></span>
+      </a>
     </div>
     <div class="curso-detalles">
       <p>
@@ -138,13 +143,6 @@
         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" class="icon-arrow-right"><line x1="5" y1="12" x2="19" y2="12"></line><polyline points="12 5 19 12 12 19"></polyline></svg>
       </a>
     </div>
-    <a
-      href="#"
-      class="btn btn-toggle-detalles"
-      aria-label="Más Información"
-    >
-      <span class="toggle-icon-placeholder"></span>
-    </a>
   </div>
 
   <div class="curso">
@@ -155,6 +153,13 @@
         class="curso-imagen-container"
       />
       <h2>Taller de inteligencia artificial enfocado en análisis de datos para contadores</h2>
+      <a
+        href="#"
+        class="btn btn-toggle-detalles"
+        aria-label="Más Información"
+      >
+        <span class="toggle-icon-placeholder"></span>
+      </a>
     </div>
     <div class="curso-detalles">
       <p>
@@ -170,13 +175,6 @@
         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" class="icon-arrow-right"><line x1="5" y1="12" x2="19" y2="12"></line><polyline points="12 5 19 12 12 19"></polyline></svg>
       </a>
     </div>
-    <a
-      href="#"
-      class="btn btn-toggle-detalles"
-      aria-label="Más Información"
-    >
-      <span class="toggle-icon-placeholder"></span>
-    </a>
   </div>
 
   <div class="curso">
@@ -187,6 +185,13 @@
         class="curso-imagen-container"
       />
       <h2>Taller de automatización con Inteligencia Artificial Aplicada al Área Contable</h2>
+      <a
+        href="#"
+        class="btn btn-toggle-detalles"
+        aria-label="Más Información"
+      >
+        <span class="toggle-icon-placeholder"></span>
+      </a>
     </div>
     <div class="curso-detalles">
       <p>
@@ -202,20 +207,74 @@
         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" class="icon-arrow-right"><line x1="5" y1="12" x2="19" y2="12"></line><polyline points="12 5 19 12 12 19"></polyline></svg>
       </a>
     </div>
-    <a
-      href="#"
-      class="btn btn-toggle-detalles"
-      aria-label="Más Información"
-    >
-      <span class="toggle-icon-placeholder"></span>
-    </a>
+  </div>
+
+  
+<div class="curso-container"> <div class="curso">
+    <div class="curso-cabecera">
+      <img
+        src="img/Taller Inteligencia Artificial para la Planificación Estratégica y Operativa.jpg" alt="Imagen Taller Inteligencia Artificial para la Planificación Estratégica y Operativa"
+        class="curso-imagen-container"
+      />
+      <h2>Taller: Inteligencia Artificial para la Planificación Estratégica y Operativa</h2>
+      <a
+        href="#"
+        class="btn btn-toggle-detalles"
+        aria-label="Más Información"
+      >
+        <span class="toggle-icon-placeholder"></span>
+      </a>
+    </div>
+    <div class="curso-detalles">
+      <p>
+        Este taller virtual te enseñará a integrar la Inteligencia Artificial en tu planificación estratégica y operativa, proporcionando herramientas prácticas para mejorar la toma de decisiones y la eficiencia. Explorarás desde conceptos clave y modelos predictivos hasta el uso de herramientas accesibles (como ChatGPT) en una actividad interactiva final.
+      </p>
+      <p><strong>Docente:</strong> Cdora. Tania Damiani</p>
+      <p><strong>Fecha:</strong> 21 de Abril de 2025</p>
+      <a
+        href="https://micuenta.cpcemza.org.ar/capacitacion_.php?ID=541"
+        class="btn btn-ingresar"
+        aria-label="Ingresar a la capacitación"
+      >
+        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" class="icon-arrow-right"><line x1="5" y1="12" x2="19" y2="12"></line><polyline points="12 5 19 12 12 19"></polyline></svg>
+      </a>
+    </div>
+  </div>
+
+  <div class="curso">
+    <div class="curso-cabecera">
+      <img
+        src="img/Taller Inteligencia Artificial aplicada a Recursos Humanos.jpeg" alt="Imagen Taller Inteligencia Artificial aplicada a Recursos Humanos"
+        class="curso-imagen-container"
+      />
+      <h2>Taller: Inteligencia Artificial aplicada a Recursos Humanos</h2>
+      <a
+        href="#"
+        class="btn btn-toggle-detalles"
+        aria-label="Más Información"
+      >
+        <span class="toggle-icon-placeholder"></span>
+      </a>
+    </div>
+    <div class="curso-detalles">
+      <p>
+        Explora cómo la Inteligencia Artificial puede transformar los Recursos Humanos, optimizando procesos clave como la selección, la gestión del talento y la toma de decisiones. Aprenderás sobre el impacto de la IA, herramientas específicas, consideraciones éticas y la aplicación de People Analytics en el área.
+      </p>
+      <p><strong>Docente:</strong> Cdora. Tania Damiani</p>
+      <p><strong>Fecha:</strong> 19 de Mayo de 2025</p>
+      <a
+        href="https://micuenta.cpcemza.org.ar/capacitacion_.php?ID=549"
+        class="btn btn-ingresar"
+        aria-label="Ingresar a la capacitación"
+      >
+        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" class="icon-arrow-right"><line x1="5" y1="12" x2="19" y2="12"></line><polyline points="12 5 19 12 12 19"></polyline></svg>
+      </a>
+    </div>
   </div>
 
 </div>
 
-
-
-
+</div>
 
 
         </div>
