telefono por whatsapp

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <section class="contacto-rapido">
             <h2>Contacto Rápido</h2>
             <p>¿Tienes preguntas? Contáctanos:</p>
-            <p>Teléfono: +54 261 5988965</p>
+            <p>Whatsapp: +54 261 5988965</p>
             <p>Sumate al grupo de Whatsapp: <a href="https://docs.google.com/forms/d/e/1FAIpQLSdG5WFtSGuL46oDscuCKxc8O7x0qQ-52e_TYk--hwoYvt9X8w/viewform">Aquí</a></p>
             <p>Contacto: <a href="https://cpcemza.org.ar/contacto.php">Formulario de contacto</a></p>
         </section>
