--- a/capacitaciones.html
+++ b/capacitaciones.html
@@ -9,6 +9,15 @@
     <link rel="icon" href="favicon_io/favicon-16x16.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-D9Y1W0VSQB"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-D9Y1W0VSQB');
+</script>
 <body>
     <header>
         <div class="container">
